--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,11 +51,12 @@ button#clear-btn {
     cursor:pointer;
 }
 
-button#clear-btn:hover {
+/* button#clear-btn:hover {
     background-color: #291a3a;
     color: white;
     opacity: 1;
-}
+} */
+
 .btn.focus,
 .btn:focus{
     outline: 0;
@@ -136,14 +137,14 @@ button:focus {
     border: 0;
 }
 
-.btn-add:hover,
+/* .btn-add:hover,
 .btn-done:hover,
 .btn-edit:hover,
 .btn-delete:hover {
     background-color: #291a3a;
     color: white;
     transition: background-color 0.5s ease;
-}
+} */
 
 .list-group-item {
     padding: 0.3rem 0.3rem;
